added google api connection

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -29,6 +29,8 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAW-HDgK8fdEceybLwvRN_7wYgI_TtHmQ0&libraries=places"></script>
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
